--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
+@font-face {
+  font-family: 'CalSans';
+  src: url('./assets/fonts/CalSans-SemiBold.woff') format('woff'),
+       url('./assets/fonts/CalSans-SemiBold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* * {
+  outline: 3px forestgreen solid;
+} */
+
+/* =========================== Tailwind ===========================  */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/*========   Custom style   ============*/
+
+.decor-after::after {
+  content: '';
+  background: url('./assets/img/main/decor.svg') 0 0 no-repeat;
+  display: block;
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  right: 36.3%;
+  transform: translateY(50%);
 }
+.title > span {
+  color: #FF6428;
+}
+
+
+/* =========================== Обнулення стилів ===========================  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img, video {
+  max-width: 100%;
+  height: auto;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+html, body {
+  height: 100vh;
+  min-width: 320px;
+}
+body {
+  line-height: 1;
+  font-family: Poppins;
+  color: #666666;
+}
+
+#root {
+  height: 100vh;
+}
+
+
